common/app/assets/stylesheets/layout/_layout.scss
/* Global wrapper
   ========================================================================== */

#preloads {
    @include gs-container;
    clear: both;
    margin: 58px auto 0;

    &.has-localnav {
        margin-top: 110px;
    }

    @media (min-width: $tablet) {
        margin-top: 104px;

        &.has-localnav {
            margin-top: 156px;
        }
    }
}


/* Global header and navigation
   ========================================================================== */

#header {
    min-height: 58px;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    z-index: 99;
}
    .header__inner {
        background-color: $blue;
    }

#logo {
    display: block;
    float: left;
    margin: 20px 0 18px $gutter;
    text-indent: -9999px;
}

/* Layout helpers
   ========================================================================== */

/**
 * @todo Should these be moved to helpers?
 */

.component {
    margin-bottom: 20px;
}

.box-indent {
    padding: 0 $gutter $baseline*1;
}

.inline-image {
    width: $inArticleInlineImgWidth;
    float: left;
    margin: 0;
    margin-right: 10px;
    margin-bottom: 15px;
    margin-top: 3px;
}

.img-tiny.inline-image {
    width: auto;
    max-width: $inArticleInlineImgWidth;
}

/* Preloads (for swipe)
   ========================================================================== */

#preloads-inner {
    position: relative;
    top: 0;
    height: 100%;
    width: 100%;
}

#preload-0,
#preload-1,
#preload-2 {
    @include transform(translateZ(0));
}

.has-swipe {
    #preload-0,
    #preload-1,
    #preload-2 {
        position: absolute;
        width: 100%;
    }

    #preload-0 {left: -100%;}
    #preload-1 {left:     0;}
    #preload-2 {left:  100%;}
}

/* Ajax loading helpers
   ========================================================================== */

.preload-msg {
    padding: 50px 50px 250px 50px;
    text-align: center;
}

.preload-msg .is-updating {
    display: block;
    margin: 10px auto;
}

